Bug 120481 - UI: Redesign of Area gradient tab not finished
Summary: UI: Redesign of Area gradient tab not finished
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0.1 target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Area-Fill-Tab Object-Fill-Gradient
  Show dependency treegraph
 
Reported: 2018-10-10 12:17 UTC by Thomas Lendo
Modified: 2018-12-14 16:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Area gradient tab in 6.2 on the left and 6.0 on the right (112.39 KB, image/png)
2018-10-10 12:17 UTC, Thomas Lendo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Lendo 2018-10-10 12:17:00 UTC
Created attachment 145565 [details]
Area gradient tab in 6.2 on the left and 6.0 on the right

I don't know if the work on the area fill 'gradient' tab is in progress and if the bug is gone in a few days--but I make this bug report priventively. :)

Open gradient sub-tab of the Area tab e.g. in the Paragraph (style) dialog.

The objects between the 'Increment' checkbox and the 'Border' slider are misplaced and the 'Center (X/Y)' objects are overlapping each other and densed. See attached screenshot comparing 6.2.0.0.alpha0+ (on the left, English) and 6.0.6.2 (on the right, German).
Comment 1 Xisco Faulí 2018-10-10 15:34:56 UTC
I can't reproduce it in

Version: 6.2.0.0.alpha0+
Build ID: 87e3539d69626780c6d7531b725dd0d64c69e6d8
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

Could you please paste the info from Help - about LibreOffice ?

I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' once the information has been provided
Comment 2 Thomas Lendo 2018-10-23 11:16:53 UTC
Still reproducible with
Version: 6.2.0.0.alpha1+ (x64)
Build ID: ae9f37ba753519ae4a2ae6384d052d417359602f
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-10-23_02:03:22
Locale: de-AT (de_AT); Calc: CL
Comment 3 raal 2018-12-11 17:37:09 UTC
Confirm Version: 6.3.0.0.alpha0+ (x64)
Build ID: 34d5e910adba4094bba1303284f9552028d0b019
CPU threads: 1; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-12-11_02:09:16

Windows only.
Comment 4 Xisco Faulí 2018-12-12 13:17:43 UTC
ok, reproduced in

Version: 6.2.0.0.alpha1+
Build ID: a20a2d7e0d28658f2d9089da076961a599833a28
CPU threads: 16; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: en-GB (en_GB); UI-Language: en-US
Calc: threaded

but not in

Version: 6.0.0.0.alpha1+
Build ID: 6eeac3539ea4cac32d126c5e24141f262eb5a4d9
CPU threads: 16; OS: Windows 6.3; UI render: default; 
Locale: en-GB (en_GB); Calc: group threaded
Comment 5 Xisco Faulí 2018-12-12 15:47:16 UTC
Actually with gen is slightly reproducible

Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=0b3ca6a1fa6bbbbd2eaaf97254fd1d45e2ac7b3a

author	Caolán McNamara <caolanm@redhat.com>	2018-09-24 16:39:18 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-09-28 14:03:24 +0200
commit 0b3ca6a1fa6bbbbd2eaaf97254fd1d45e2ac7b3a (patch)
tree 2b22f863b72463bebb8b26225f378aea0fefddb1
parent 68de1021353902d48ddd712f5e6fedc51c57936d (diff)
weld SvxNumberFormatTabPage

Bisected with: bibisect-win32-6.2

Adding Cc: to Caolán McNamara
Comment 6 Caolán McNamara 2018-12-12 21:25:24 UTC
The width is 12 pixels less than it should be, and 6 pixels is the typical border width so we've skipped the border of some widget or other in a calculation.

I think the problem is measuring the gradient, area etc sub-pages desired size and applying their max to its parent as the parent desired size. Which doesn't take into account the parents border width, so the gradient gets hosted inside a parent which is 12 pixels less than it hoped for
Comment 7 Commit Notification 2018-12-13 08:53:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/322d5b231c35fed64ea597deccf716ef1917cd26%5E%21

Resolves: tdf#120481 gradient subpage 12 pixels too short

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2018-12-13 08:53:30 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/115268087dea599d4248213b1085d07275c0a007%5E%21

Resolves: tdf#120481 gradient subpage 12 pixels too short

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2018-12-14 16:21:53 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 12e878d3b5e8a59079811c36b7c89e588266dd0e
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this!!