Resolves: tdf#120481 gradient subpage 12 pixels too short

because the max preferred-size of the subpages is taken and
applied as the size-request of the container parent.

But the container parent as a 6px border, so the subpages end
up hosted in a parent which allocates them 12px less than they hoped
for.

As they are instantiated in the parent to measure them, measure their
parent instead and that calculates in the parent's border to end up
with what they wanted

Change-Id: Ib270b90f9c2fed7f8bd042cc66d0d10ad3c6f183
Reviewed-on: https://gerrit.libreoffice.org/65059
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>